--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,7 @@ h1 {
 .todo-item {
   display: flex;
   align-items: center;
+  /* border: 1px solid #666; */
   border-radius: 5px;
   padding: 10px;
   background-color: #647b96;
